# Zhihu-comments-integration

./: .gitignore  PRD.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_agnes.py  test_agnes2.py  test_agnes3.py  test_agnes4.py  test_agnes_final.py  test_api.py  test_api2.py  test_api3.py  test_models.py  启动配置页面.bat  如何看待伊朗队在洛杉矶更衣室留下的感谢信？-20260624.md  如何看待伊朗队在洛杉矶更衣室留下的感谢信？-20260625.md
analyzer/: comment_analyzer.py
config/: proxies.example.json  proxy_sources.json  settings.json  stopwords.txt
docs/: PRD.md
scraper/: anti_detection.py
scripts/: app.py  start_config.py
src/: __init__.py
src/analyzer/: __init__.py
src/data/: __init__.py  storage.py
src/generator/: __init__.py  article_generator.py
src/llm/: __init__.py  config_manager.py  llm_client.py  presets.py
src/rewriter/: __init__.py  comment_rewriter.py
src/scraper/: __init__.py  proxy_manager.py  zhihu_api.py  zhihu_scraper.py
tests/: test_core.py
