[project]
name = "zhihu-comments-integration"
version = "1.0.0"
description = "知乎评论整合工具 - 抓取评论、情感分析、生成文章"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Colinchiu007"}
]
keywords = ["zhihu", "comment", "sentiment-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "jieba>=0.42.1",
    "snownlp>=0.12.3",
    "streamlit>=1.28.0",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/Colinchiu007/Zhihu-comments-integration"
Repository = "https://github.com/Colinchiu007/Zhihu-comments-integration"
Issues = "https://github.com/Colinchiu007/Zhihu-comments-integration/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"